--- a/single-services-websites.html
+++ b/single-services-websites.html
@@ -90,7 +90,7 @@
           <div class="container d-flex justify-content-between rtl-flex-d-row-r">
             <div class="p-title-price">
               <h5 class="mb-1">انشاء موقع وردبريس احترافي</h5>
-              <p class="sale-price mb-0 lh-1">سعر الخدمة يبدأ من 750 د.م</p>
+              <p class="sale-price mb-0 lh-1">سعر الخدمة يبدأ من 1500 د.م</p>
             </div>
             <div class="p-wishlist-share"><a href="#"><i class="fa-solid fa-heart"></i></a></div>
           </div>
@@ -121,8 +121,239 @@
           </div>
         </div>
 		
+<!-- Pricing Table 01-->
+  <div class="related-product-wrapper bg-white py-3 mb-3">
+          <div class="container">
+		   <h4 dir="rtl">التسعير لدينا</h4>
+		   <h6 dir="rtl"><center>سعر منخفض</center></h6>
+            <p dir="rtl">إنشاء متجر إلكتروني للشحن التلقائي أو إعادة تصميم موقع Shopify.</p>
+<div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div class="card-header py-3 text-bg-danger border-danger">
+            <h4 class="my-0 fw-normal">Basic</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">1500<small class="text-body-secondary fw-nghit"> DH</small></h1>
+            <ul class="list-group-item list-unstyled mt-3 mb-4">
+              <li>3 page</li>
+              <li>Responsive design</li>
+              <li>Content upload</li>
+              <li>2 plugins/extensions</li>
+			  <li>E-commerce functionality</li>
+			  <li>Opt-in Form</li>
+			  <li>5 products</li>
+			  <li>Social media icons</li>
+            </ul>
+			<p dir="rtl">A Top-Selling Dropshipping Store with 5 Products on free basic theme + 3 Apps + Logo</p>
+            <a href="https://ninjasquad.gumroad.com/l/CheapPriceBasicPlan/?wanted=true" target="_blank" type="button" class="w-100 btn btn-lg btn-danger">!اطلب الآن</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div class="card-header py-3 text-bg-info border-info">
+            <h4 class="my-0 fw-normal">Standard</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">2700<small class="text-body-secondary fw-light"> DH</small></h1>
+            <ul class="list-group-item list-unstyled mt-3 mb-4">
+              <li>6 page</li>
+              <li>Responsive design</li>
+              <li>Content upload</li>
+              <li>3 plugins/extensions</li>
+			  <li>E-commerce functionality</li>
+			  <li>Opt-in Form</li>
+			  <li>20 products</li>
+			  <li>Social media icons</li>
+            </ul>
+			<p dir="rtl">Starter offer + Premium Theme + Premium Logo + 20 Winning Products + 4 Apps + Basic SEO+ FREE PDF</p>
+            <a type="button" href="https://ninjasquad.gumroad.com/l/CheapPriceStandardPlan/?wanted=true" target="_blank" class="w-100 btn btn-lg btn-info">!اطلب الآن</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm border-primary">
+          <div class="card-header py-3 text-bg-primary border-primary">
+            <h4 class="my-0 fw-normal">Premium</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">4500<small class="text-body-secondary fw-light"> DH</small></h1>
+            <ul class="list-group-item  list-unstyled mt-3 mb-4">
+             <li>8 page</li>
+              <li>Responsive design</li>
+              <li>Content upload</li>
+              <li>5 plugins/extensions</li>
+			  <li>E-commerce functionality</li>
+			  <li>Opt-in Form</li>
+			  <li>40 products</li>
+			  <li>Social media icons</li>
+            </ul>
+			<p dir="rtl">STANDARD offer + 40 Winning Products + Fast Suppliers + Marketing Guide pdf + Basic SEO & More.</p>
+            <a type="button" href="https://ninjasquad.gumroad.com/l/CheapPricePremiumPlan/?wanted=true" target="_blank" class="w-100 btn btn-lg btn-primary">!اطلب الآن</a>
+          </div>
+        </div>
+      </div>
+    </div></div></div>
+<!-- Pricing Table -->		
+
+<!-- Pricing Table 02-->
+  <div class="related-product-wrapper bg-white py-3 mb-3">
+          <div class="container">
+		   <h4 dir="rtl">التسعير لدينا</h4>
+		   <h6 dir="rtl"><center>سعر متوسط</center></h6>
+            <p dir="rtl">إنشاء موقع متجر Shopify للشحن التلقائي عالي الإيرادات مع الموردين.</p>
+<div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div class="card-header py-3 text-bg-danger border-danger">
+            <h4 class="my-0 fw-normal">Basic</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">3150<small class="text-body-secondary fw-nghit"> DH</small></h1>
+            <ul class="list-group-item list-unstyled mt-3 mb-4">
+              <li>2 page</li>
+              <li>Responsive design</li>
+              <li>Content upload</li>
+              <li>2 plugins/extensions</li>
+			  <li>E-commerce functionality</li>
+			  <li>Opt-in Form</li>
+			  <li>5 products</li>
+			  <li>Social media icons</li>
+            </ul>
+			<p dir="rtl">Converting Shopify Store on Free Theme + 5 Best Selling Products + SEO Friendly Titles</p>
+            <a href="https://ninjasquad.gumroad.com/l/AveragePriceBasicPlan/?wanted=true" target="_blank" type="button" class="w-100 btn btn-lg btn-danger">!اطلب الآن</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div class="card-header py-3 text-bg-info border-info">
+            <h4 class="my-0 fw-normal">Standard</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">6000<small class="text-body-secondary fw-light"> DH</small></h1>
+            <ul class="list-group-item list-unstyled mt-3 mb-4">
+              <li>5 page</li>
+              <li>Responsive design</li>
+              <li>Content upload</li>
+              <li>4 plugins/extensions</li>
+			  <li>E-commerce functionality</li>
+			  <li>Opt-in Form</li>
+			  <li>15 products</li>
+			  <li>Social media icons</li>
+            </ul>
+			<p dir="rtl">Converting Shopify Store on Premium Theme + 15 Best Selling Products + SEO Friendly Titles</p>
+            <a type="button" href="https://ninjasquad.gumroad.com/l/AveragePriceStandardPlan/?wanted=true" target="_blank" class="w-100 btn btn-lg btn-info">!اطلب الآن</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm border-primary">
+          <div class="card-header py-3 text-bg-primary border-primary">
+            <h4 class="my-0 fw-normal">Premium</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">8550<small class="text-body-secondary fw-light"> DH</small></h1>
+            <ul class="list-group-item  list-unstyled mt-3 mb-4">
+             <li>7 page</li>
+              <li>Responsive design</li>
+              <li>Content upload</li>
+              <li>6 plugins/extensions</li>
+			  <li>E-commerce functionality</li>
+			  <li>Opt-in Form</li>
+			  <li>25 products</li>
+			  <li>Social media icons</li>
+            </ul>
+			<p dir="rtl">Converting Shopify Store on Premium Theme + 25 Best Selling Products + SEO Product Descriptions</p>
+            <a type="button" href="https://ninjasquad.gumroad.com/l/AveragePricePremiumPlan/?wanted=true" target="_blank" class="w-100 btn btn-lg btn-primary">!اطلب الآن</a>
+          </div>
+        </div>
+      </div>
+    </div></div></div>
+<!-- Pricing Table -->	
+
+<!-- Pricing Table 03-->
+  <div class="related-product-wrapper bg-white py-3 mb-3">
+          <div class="container">
+		   <h4 dir="rtl">التسعير لدينا</h4>
+		   <h6 dir="rtl"><center>غالٍ جداً</center></h6>
+            <p dir="rtl">.إنشاء موقع ووردبريس جمالي باستخدام إلمينتور برو</p>
+<div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div class="card-header py-3 text-bg-danger border-danger">
+            <h4 class="my-0 fw-normal">Basic</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">15,000<small class="text-body-secondary fw-nghit"> DH</small></h1>
+            <ul class="list-group-item list-unstyled mt-3 mb-4">
+              <li>1 page</li>
+              <li>Responsive design</li>
+              <li>Content upload</li>
+              <li>5 plugins/extensions</li>
+			  <li>Speed optimization</li>
+			  <li>Opt-in Form</li>
+			  <li>Hosting setup</li>
+			  <li>Social media icons</li>
+            </ul>
+			<p dir="rtl">Fully working, easy editable modern, fast & responsive 1 page website.</p>
+            <a href="https://ninjasquad.gumroad.com/l/VeryExpensiveBasicPlan/?wanted=true" target="_blank" type="button" class="w-100 btn btn-lg btn-danger">!اطلب الآن</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div class="card-header py-3 text-bg-info border-info">
+            <h4 class="my-0 fw-normal">Standard</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">39,000<small class="text-body-secondary fw-light"> DH</small></h1>
+            <ul class="list-group-item list-unstyled mt-3 mb-4">
+              <li>5 page</li>
+              <li>Responsive design</li>
+              <li>Content upload</li>
+              <li>5 plugins/extensions</li>
+			  <li>E-commerce functionality</li>
+			  <li>Opt-in Form</li>
+			  <li>Payment processing</li>
+			  <li>Speed optimization</li>
+			  <li>Hosting setup</li>
+			  <li>Social media icons</li>
+            </ul>
+			<p dir="rtl">All features from the Basic package. 5 pages</p>
+            <a type="button" href="https://ninjasquad.gumroad.com/l/VeryExpensiveStandardPlan/?wanted=true" target="_blank" class="w-100 btn btn-lg btn-info">!اطلب الآن</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm border-primary">
+          <div class="card-header py-3 text-bg-primary border-primary">
+            <h4 class="my-0 fw-normal">Premium</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">64,500<small class="text-body-secondary fw-light"> DH</small></h1>
+            <ul class="list-group-item  list-unstyled mt-3 mb-4">
+             <li>10 page</li>
+              <li>Responsive design</li>
+              <li>Content upload</li>
+              <li>10 plugins/extensions</li>
+			  <li>E-commerce functionality</li>
+			  <li>Opt-in Form</li>
+			  <li>Payment processing</li>
+			  <li>Speed optimization</li>
+			  <li>Hosting setup</li>
+			  <li>Social media icons</li>
+            </ul>
+			<p dir="rtl">All features from the Basic package. 10 pages</p>
+            <a type="button" href="https://wa.me/0718113533" target="_blank" class="w-100 btn btn-lg btn-primary">تواصل معنا!</a>
+          </div>
+        </div>
+      </div>
+    </div></div></div>
+<!-- Pricing Table -->	
 	
-<!-- Pricing Table -->
+
   <div class="related-product-wrapper bg-white py-3 mb-3">
           <div class="container">
 		   <h6 dir="rtl">تطويرات متوفرة لهذه الخدمة</h6>
@@ -135,7 +366,7 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 1750 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ يوم إضافي.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 1750 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ يوم إضافي.</br> <code><a class="text-danger" href="https://wa.me/0718113533">تواصل معنا <i class="fa-solid fa-phone"></i></a></code>
       </div>
     </div>
   </div>
@@ -147,7 +378,7 @@
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
      <div class="accordion-body">
-        <strong>مقابل 2500 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ يوم إضافي.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 2500 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ يوم إضافي.</br> <code><a class="text-danger" href="https://wa.me/0718113533">تواصل معنا <i class="fa-solid fa-phone"></i></a></code>
       </div>
     </div>
   </div>
@@ -159,7 +390,7 @@
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 3750 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 4 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 3750 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 4 أيام إضافية.</br> <code><a class="text-danger" href="https://wa.me/0718113533">تواصل معنا <i class="fa-solid fa-phone"></i></a></code>
       </div>
     </div>
   </div>
@@ -171,7 +402,7 @@
     </h2>
     <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 3750 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 4 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 3750 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 4 أيام إضافية.</br> <code><a class="text-danger" href="https://wa.me/0718113533">تواصل معنا <i class="fa-solid fa-phone"></i></a></code>
       </div>
     </div>
   </div>
@@ -183,7 +414,7 @@
     </h2>
     <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 3750 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 4 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 3750 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 4 أيام إضافية.</br> <code><a class="text-danger" href="https://wa.me/0718113533">تواصل معنا <i class="fa-solid fa-phone"></i></a></code>
       </div>
     </div>
   </div>
