--- a/checkout-payment-seo.html
+++ b/checkout-payment-seo.html
@@ -45,7 +45,7 @@
     <div class="header-area" id="headerArea">
       <div class="container h-100 d-flex align-items-center justify-content-between rtl-flex-d-row-r">
         <!-- Back Button-->
-        <div class="back-button me-2"><a href="settings.html"><i class="fa-solid fa-arrow-left-long"></i></a></div>
+        <div class="back-button me-2"><a href="single-services-seo.html"><i class="fa-solid fa-arrow-left-long"></i></a></div>
         <!-- Page Title-->
         <div class="page-heading">
           <h6 class="mb-0">اختر وسيلة الدفع</h6>
@@ -173,7 +173,7 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 1500 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ يومين إضافيين.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 1500 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ يومين إضافيين.</br> <code><a class="text-danger" target="_blank" href="https://ninjasquad.gumroad.com/l/seo-01/?wanted=true">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -185,7 +185,7 @@
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
      <div class="accordion-body">
-        <strong>مقابل 1650 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ 4 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 1650 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ 4 أيام إضافية.</br> <code><a class="text-danger" target="_blank" href="https://ninjasquad.gumroad.com/l/seo-02/?wanted=true">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -197,7 +197,7 @@
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 1950 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ يومين إضافيين.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 1950 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ يومين إضافيين.</br> <code><a class="text-danger" target="_blank" href="https://ninjasquad.gumroad.com/l/seo-03/?wanted=true">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -209,7 +209,7 @@
     </h2>
     <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 3000 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ 3 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 3000 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ 3 أيام إضافية.</br> <code><a class="text-danger" target="_blank" href="https://ninjasquad.gumroad.com/l/seo-04/?wanted=true">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -221,7 +221,7 @@
     </h2>
     <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 3750 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ 3 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 3750 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ 3 أيام إضافية.</br> <code><a class="text-danger" target="_blank" href="https://ninjasquad.gumroad.com/l/seo-05/?wanted=true">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
