--- a/single-services-seo.html
+++ b/single-services-seo.html
@@ -142,7 +142,7 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 1500 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ يومين إضافيين.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 1500 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ يومين إضافيين.</br> <code><a class="text-danger" href="checkout-payment-seo.html">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -154,7 +154,7 @@
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
      <div class="accordion-body">
-        <strong>مقابل 1650 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ 4 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 1650 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ 4 أيام إضافية.</br> <code><a class="text-danger" href="checkout-payment-seo.html">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -166,7 +166,7 @@
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 1950 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ يومين إضافيين.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 1950 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ يومين إضافيين.</br> <code><a class="text-danger" href="checkout-payment-seo.html">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -178,7 +178,7 @@
     </h2>
     <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 3000 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ 3 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 3000 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ 3 أيام إضافية.</br> <code><a class="text-danger" href="checkout-payment-seo.html">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -190,7 +190,7 @@
     </h2>
     <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 3750 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ 3 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 3750 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ 3 أيام إضافية.</br> <code><a class="text-danger" href="checkout-payment-seo.html">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
