--- a/single-services-smlogo.html
+++ b/single-services-smlogo.html
@@ -141,7 +141,7 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 600 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ يوم إضافي</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 600 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ يوم إضافي</br> <code><a class="text-danger" href="checkout-payment-smlogo.html">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -153,7 +153,7 @@
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
      <div class="accordion-body">
-        <strong>مقابل 600 د.م</strong>  إضافية على سعر الخدمة.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 600 د.م</strong>  إضافية على سعر الخدمة.</br> <code><a class="text-danger" href="checkout-payment-smlogo.html">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -165,7 +165,7 @@
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 1650 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 3 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 1650 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 3 أيام إضافية.</br> <code><a class="text-danger" href="checkout-payment-smlogo.html">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
