--- a/single-services-smp.html
+++ b/single-services-smp.html
@@ -133,7 +133,7 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 450 د.م</strong> إضافية على سعر الخدمة.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 450 د.م</strong> إضافية على سعر الخدمة.</br> <code><a class="text-danger" href="checkout-payment-smp.html">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -145,7 +145,7 @@
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
      <div class="accordion-body">
-        <strong>مقابل 450 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ يوم إضافي.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 450 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ يوم إضافي.</br> <code><a class="text-danger" href="checkout-payment-smp.html">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -157,7 +157,7 @@
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 1200 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ يوم إضافي.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 1200 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ يوم إضافي.</br> <code><a class="text-danger" href="checkout-payment-smp.html">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -169,7 +169,7 @@
     </h2>
     <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 3150 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 7 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 3150 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 7 أيام إضافية.</br> <code><a class="text-danger" href="checkout-payment-smp.html">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
