--- a/single-services-smads.html
+++ b/single-services-smads.html
@@ -135,7 +135,7 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 300 د.م</strong> إضافية على سعر الخدمة.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 300 د.م</strong> إضافية على سعر الخدمة.</br> <code><a class="text-danger" href="checkout-payment-smads.html">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -147,7 +147,7 @@
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
      <div class="accordion-body">
-        <strong>مقابل 450 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ يوم إضافي.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 450 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ يوم إضافي.</br> <code><a class="text-danger" href="checkout-payment-smads.html">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -159,7 +159,7 @@
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 450 د.م</strong> إضافية على سعر الخدمة.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 450 د.م</strong> إضافية على سعر الخدمة.</br> <code><a class="text-danger" href="checkout-payment-smads.html">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -171,7 +171,7 @@
     </h2>
     <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 600 د.م</strong> إضافية على سعر الخدمة.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 600 د.م</strong> إضافية على سعر الخدمة.</br> <code><a class="text-danger" href="checkout-payment-smads.html">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -183,7 +183,7 @@
     </h2>
     <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 750 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 3 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 750 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 3 أيام إضافية.</br> <code><a class="text-danger" href="checkout-payment-smads.html">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
